--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
         volumes:
             -   ./:/app
         command: >
-            sh -c "python manage.py migrate &&
-                      python manage.py wait_for_db &&
-                      python manage.py runserver 0.0.0.0:8000"
+                    sh -c "python manage.py wait_for_db &&
+                    python manage.py migrate &&                       
+                    python manage.py runserver 0.0.0.0:8000"
         env_file:
             -   .env
         depends_on:
